--- a/gb/25/12/3/n14648284.md
+++ b/gb/25/12/3/n14648284.md
@@ -5,7 +5,7 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14647085-d0de3e32977f1eb5551574ed91200x1200.jpg" />
 <h6>香港大埔宏福苑于11月26日下午起火，随后迅速蔓延，最终升至五级火警，七楝大厦熊熊燃烧。（吴锐略／大纪元）</h6>
 <hr>
-	<p>【大纪元2025年12月04日讯】（大纪元记者宋唐、易如采访报导）11月底的香港大埔宏福苑大火至今死亡人数已攀升至159人，这是中共香港国安法执行以来的最重大一次公共灾难。</p>
+	<p>【大纪元2025年12月04日讯】（大纪元记者宋唐、易如采访报导）11月底的香港大埔宏福苑大火至今死亡人数已攀升至159人，这是中共《香港国安法》执行以来的最重大一次公共灾难。</p>
 <p>分析认为，香港回归后治理方式慢慢大陆化，失去传统上清廉的特色，在国安法阴云笼罩之下，民主监督制度被破坏，这件民生事故，又被放大成对北京的安全威胁，港府的应对方式逐渐变得与北京并无二致。</p>
 <h2><strong>竹架与棚网之争?? </strong></h2>
 <p>在香港大火之初，竹棚被指为火势迅速蔓延的罪魁祸首。</p>
@@ -35,7 +35,7 @@
 <p>《上报》专栏作者郑立撰文指出，“如果你告诉二十年前，三十年前的我，香港会发生这种事，我根本就不会相信。” 他写道，“我在中学读工科的时代，我的老师就非常强调一件事，我们香港在工程与工业上全部都是依英制的，所以我们的安全系数比别人还要高 20%，这是我们的建筑物面对台风，火灾，地震，都比邻近地区要少出现伤亡的原因。”</p>
 <p>他继续写道，这种美好的印象大概在十年前开始破灭。 十年前香港的工业意外已有显着上升，数量与程度都在上升，但建筑业致命意外由每千人0.9 升到1.8左右。</p>
 <p>大埔宏福苑大维修工程承建商是“宏业建筑工程有限公司”，大火后，这家公司引发质疑。</p>
-<p>《大公报》报导，十多年来，香港工程公司围标的情况也非常严重，导致有水准的公司越来越少，竞标的结果来来去去都是那几间。他形容，宏业建筑工程是业内有名的竞标“常胜将军”，“他们接了很多工程，但试问这么多工程，哪有这么多资源投入呢？</p>
+<p>《大公报》报导，十多年来，香港工程公司围标的情况也非常严重，导致有水准的公司越来越少，竞标的结果来来去去都是那几间。他形容，宏业建筑工程是业内有名的竞标“常胜将军”，“他们接了很多工程，但试问这么多工程，哪有这么多资源投入呢？”</p>
 <p>据报导，“宏业建筑”曾涉及多宗违反建筑安全规定的事件，在2022年至2025年期间最少被控告违反《职业安全及健康条例》10次。</p>
 <p>自2023年起就有人宏福苑施工提出投诉，警告存在火灾风险。去年9月曾有香港市民就宏福苑施工所用的“棚网阻燃”问题咨询有关部门，香港劳工处的公开回应是“有关棚架上装置的保护幕（棚网）的作用是限制物件坠下的范围，并没有涵盖关于棚网或任何物料的阻燃标准。</p>
 <p>林松表示，去年和前年都有人提出防护网的问题，写了很多电邮给香港消防处处长，但一封电邮都没有回复。如果他很忙还有助手，为什么没有回应？除了消防处，有市民向房屋处、劳工处投诉防护网，一直都没有回复，有些回复也推来推去。所以这次大火，香港人看见了，现在香港已经不是以前的香港了，已经从一个国际大都市变成跟大陆一样的内地城市，倒退一百多年。</p>
@@ -48,9 +48,9 @@
 <p>林卓廷（Lam Cheuk Ting）曾任香港立法会议员、北区区议员、廉政公署助理调查主任。2016年立法会选举，林卓廷代表民主党参选，参与新界东选区，成功当选，由上任民主党立法会议员刘慧卿手上接棒。他发起“全港业主反贪腐反围标大联盟”，调查围标黑幕。</p>
 <p>林卓廷是《香港国安法》下47人案中的被告之一，该案的被告因参与2020年立法会民主派初选而被捕。</p>
 <h2><strong>国安法阴云之下的香港大火</strong></h2>
-<p>香港宏福苑大火，是中共香港国安法执行以来最重大的一次公共灾难，在国安法阴云笼罩之下，这件民生事故却被放大成对北京的安全威胁，港府的应对方式逐渐变得与北京并无二致。</p>
+<p>香港宏福苑大火，是中共《香港国安法》执行以来最重大的一次公共灾难，在国安法阴云笼罩之下，这件民生事故却被放大成对北京的安全威胁，港府的应对方式逐渐变得与北京并无二致。</p>
 <p>火灾发生后，香港特首李家超首次发布讲话，首先是对中共党魁、港澳办和中联办表示感谢，而对香港巿民与企业主动捐款捐物资，竟一句话都没有提。</p>
-<p>10月2日，李家超宣布将成立一个独立委员会调查此次火灾。但香港市民很快指出，尽管该委员会由法官领导，但它缺乏“调查委员会”所拥有的关键调查权力，包括传唤任何人作证以及惩罚拒不作证者的权力。</p>
+<p>12月2日，李家超宣布将成立一个独立委员会调查此次火灾。但香港市民很快指出，尽管该委员会由法官领导，但它缺乏“调查委员会”所拥有的关键调查权力，包括传唤任何人作证以及惩罚拒不作证者的权力。</p>
 <p>英国《卫报》指出，香港有由法官主导的独立灾难调查的传统，但自2019年和2020年香港民主抗议活动后遭到镇压，包括实施两项国家安全法以来，许多法律专家认为香港的司法机构已不再独立。</p>
 <p>澳广观点文章指出，在国安体制之下，公民行动与政治威胁之间的界线已经模糊到几乎无法辨认。过去再日常不过的行为——提交投诉、要求问责、发起请愿、邻里互助——如今都带着隐含风险。北京一再坚持主权不可被挑战，这种信念甚至改变了“灾难”本身的语汇：寻求答案可以被重新定义为“鼓动”；悲痛可以被解读为“对抗”；志愿服务可以被视为“集结”。</p>
 <p>这种价值观与香港自身的政治文化截然不同。这座国际金融中心在几十年间被这些因素塑造着：赢得公众信任的法院、重视透明与调查的传统，以及一个曾经习惯甚至要求问责当权者的社会。</p>
@@ -80,33 +80,33 @@
 <p>林松表示，这次大火烧出来一个事实，已经可以说是一个里程碑。香港人都看见，现在香港已经不是我们以前熟悉的，香港现在已经变成跟大陆一样的，国安警方政府要去解决提出问题的人，不是去解决那个问题本身。</p>
 <p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652372.md#1">诺贝尔和平奖颁奖前夕 得奖主马查多下落不明</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652382.md#1">川普：希望看到一个强大的欧洲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652286.md#1">俄中轰炸机在日本近海巡航 日战机全程监视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652282.md#1">波兰取缔共产党 大陆网民叫好 专家解读</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/3/n14648284.htm">透视国安法阴云之下的香港大火</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648284.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
