--- a/gb/25/12/4/n14648435.md
+++ b/gb/25/12/4/n14648435.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>获奖调查记者：中共在加剧全球跨国镇压</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>加国调查记者：中共升级跨国镇压 威胁全球</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14648454-SamCooper-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2025年12月04日讯】（大纪元记者梁耀采访报道）加拿大获奖调查记者因为揭露中共在加拿大的渗透和干扰，也成为中共跨国镇压的受害者之一。通过对中共在海外行动的观察，他表示中共渗透、针对异议人士的法律战、信息战在不断升级。</p>
-<p>加拿大著名调查记者山姆·库珀（Sam Cooper）是加拿大知名的获奖调查记者， 曾获得“叙事报导”与“调查新闻”奖项，他以揭露中国与跨国有组织犯罪在加拿大的渗透、洗钱与政治影响而闻名。他的著作《Wilful Blindness》（《视若无睹》）在加拿大出版后，迅速畅销书，并获得多项新闻奖项。他的工作在加拿大政界、执法部门乃至国际安全领域都有影响。</p>
-<p>库珀近日接受大纪元采访时表示，中共威胁与打压已不仅限于中国境内，而是延伸至全球，并呈现出系统化、升级化。他揭示了中共跨国镇压的多种模式：从垃圾邮件与虚假威胁，到针对政治人物、专家学者、记者、社区活动家及其家人，甚至延伸至少数族裔与宗教团体。他呼吁加拿大政府加快立法，正视中共跨国镇压和干预带来的威胁。他将纽约孙雯案视为可能影响加拿大的“试金石”，该案也为加拿大调查中共渗透提供蓝图。</p>
+	<p>【大纪元2025年12月04日讯】（大纪元记者梁耀采访报导）加拿大获奖调查记者因为揭露中共在加拿大的渗透和干扰，也成为中共跨国镇压的受害者之一。通过观察中共在海外的行动，他表示中共渗透、针对异议人士的法律战、信息战在不断升级。</p>
+<p>加拿大著名调查记者山姆·库珀（Sam Cooper）是加拿大知名的获奖调查记者，曾获得“叙事报导”与“调查新闻”奖项，他以揭露中国与跨国有组织犯罪在加拿大的渗透、洗钱与政治影响而闻名。他的著作《Wilful Blindness》（《视若无睹》）在加拿大出版后，迅速成为畅销书，并获得多项新闻奖项。他的工作对加拿大政界、执法部门乃至国际安全领域都有影响。</p>
+<p>库珀近日接受大纪元采访时表示，中共威胁与打压已不仅限于中国境内，而是延伸至全球，并呈现出系统化、升级化。他揭示了中共跨国镇压的多种模式：从垃圾邮件与虚假威胁，到针对政治人物、专家学者、记者、社区活动家及其家人，甚至延伸至少数族裔与宗教团体。他呼吁加拿大政府加快立法，正视中共跨国镇压和干预带来的威胁。他将纽约孙雯案视为可能影响加拿大的“试金石”，该案也为加拿大调查中共渗透提供示范。</p>
 <h2>中共跨国镇压重大例证：用虚假威胁针对神韵</h2>
 <p>近年来，中共在加拿大对神韵艺术团的干扰愈加明显，手段包括炸弹威胁、虚假信息等跨国镇压行动。这些威胁虽然最后都被证实是欺骗，但已造成剧场疏散、警方调查与心理恐惧，被视为跨国镇压的一部分。</p>
 <p>作为对中共威权主义有深入了解的专业记者，库克说，“这种威胁发生在剧场这样的环境中，就是跨国镇压的一个重大例证。”</p>
@@ -15,62 +15,63 @@
 <p>库珀透露，在他所写的《视若无睹》一书出版后，加拿大情报部门告诉他，他已成为中共国安的目标。中方试图调查他是否受到法轮功或其他中共“敌人”的资助。</p>
 <p>库珀说：“身为记者，我清楚中共有意消灭法轮功。如果他们针对与法轮功相关的剧场演出（有所行动），那无疑是其为了消除这一群体所做努力的一环。”</p>
 <p>关于利用电子邮件进行威胁的案例，他提到公开批评中共的国际专家，如德国政治学者安德烈亚斯·富尔达（Andreas Fulda）等，都曾遭遇垃圾邮件的攻击，有人甚至因收到炸弹威胁而报警。“在我看来，这一切行为都符合跨国镇压的模式。”</p>
-<p>2025年7月13日，法轮功学员在多伦多市中心皇后公园（Queen’s Park） 举行的活动，遭到持中共旗帜人士的骚扰与攻击。这些人试图冲击法轮功修炼者，事件引起警方介入并被媒体报导。这类事件在世界各地都时有发生。库珀说：“中共代理人常与有组织犯罪集团挂钩，并对被中共视为敌人的批评者展开打压。”</p>
+<p>2025年7月13日，法轮功学员在多伦多市中心皇后公园（Queen’s Park）举行的活动，遭到持中共旗帜人士的骚扰与攻击。这些人试图冲击法轮功修炼者，事件引起警方介入并被媒体报导。这类事件在世界各地都时有发生。库珀说：“中共代理人常与有组织犯罪集团挂钩，并对被中共视为敌人的批评者展开打压。”</p>
 <h2>加拿大情况的恶化</h2>
 <p>库珀强调，近年来，中共在加拿大的跨国镇压情况更加严重。他说，许多政治人物、记者以及海外社区的批评者都成为目标，而他本人也因调查中共活动而遭受压力。</p>
 <p>库珀认为，在加拿大，最严重的跨国镇压案例之一就是在今年的大选中，郑敬基（Joseph Tay）参选国会议员受阻的事件。由于郑敬基为香港民主发声，中共在宣传中将其作为目标，导致他在选举期间遭受威胁与骚扰。虽然加拿大骑警（RCMP）知情，但政府未能为其提供有效的保护，使他不得不减少面对面的竞选活动，影响了选举结果。</p>
 <p>库珀表示，郑敬基由于反对中共在香港的行为和国安法而遭到中共跨国镇压。“在我看来，这是一个非常严重的未被起诉的中共跨国镇压案例。”他说，“我们确知郑敬基不得不减少面对面的竞选活动，而他的自由党对手在激烈的竞争中赢得了那个选区，以几千票的差距获胜。该选区对中共来说非常重要。”</p>
-<p>郑敬基是香港出生的前歌手、演员，后移居加拿大。近年，他经营的自媒体“香港台”（HongKonger Station）发布多段影片与贴文，支持香港自由民主并呼吁外国制裁香港官员。2024年12月24日，他被香港警方以《港区国安法》通缉，并悬红 100 万港元。2025年，他获加拿大保守党提名，代表安大略省多伦多的当河谷北选区（Don Valley North）参选联邦国会议员。</p>
+<p>郑敬基是香港出生的前歌手、演员，后移居加拿大。近年，他经营的自媒体“香港台”（HongKonger Station）发布多段影片与帖文，支持香港自由民主并呼吁外国制裁香港官员。2024年12月24日，他被香港警方以《港区国安法》通缉，并悬红100万港元。2025年，他获加拿大保守党提名，代表安大略省多伦多的当河谷北选区（Don Valley North）参选联邦国会议员。</p>
 <p>近年来，中共曾多次对加拿大政治人物进行制裁。其中著名的案例是2021年3月，中国外交部宣布制裁加拿大国会议员庄文浩（Michael Chong） 及加拿大国会“对华政策跨党派小组”的成员，理由是他们批评中共在新疆侵犯人权。这些制裁包括禁止相关人士及家属入境中国，以及禁止中国公民和机构与他们进行往来。</p>
 <p>国会议员庄文浩的家人曾在香港遭受中共威胁，库珀认为，这是针对批评者家庭成员的典型模式。</p>
 <h2>中共全球系统化的信息战和法律战不断升级</h2>
-<p>2025年11月，中国驻大阪总领事薛剑在社群平台 X 上发表“斩首言论”，针对日本首相 高市早苗关于“武力行使”的国会答询，声称“擅自插手的肮脏头颅，应该毫不犹豫斩掉”。此言论引发日本朝野强烈抗议，并在海内外掀起舆论争议。</p>
+<p>2025年11月，中共驻大阪总领事薛剑在社群平台X上发表“斩首言论”，针对日本首相高市早苗关于“武力行使”的国会答询，声称“擅自插手的肮脏头颅，应该毫不犹豫斩掉”。此言论引发日本朝野强烈抗议，并在海内外掀起舆论争议。</p>
 <p>库珀认为，这种跨国镇压的加剧与中共对台湾的军事威胁息息相关。他说，日本新首相合理评论台湾安全问题，却遭到中共外交官的威胁，甚至出现“砍头”的恐吓言论。</p>
-<p>他说：“这显示了（中共）跨国威胁的嚣张程度，可以延伸到国家元首或批评中共的记者，甚至仅仅是社区活动家。这种威胁可以从上到下，对任何提出合理评论的人都使用相同的战术。”</p>
+<p>他说：“这显示了（中共）跨国威胁的嚣张程度，可以延伸到国家元首或批评中共的记者，甚至是社区活动家。这种威胁可以从上到下，对任何提出合理评论的人都使用相同的战术。”</p>
 <p>类似案例也发生在台湾，立法委员沈伯洋在台湾国会及公开场合多次揭露中共利用假讯息、统战手段影响台湾社会，因此遭到中共跨国威胁与法律战。北京方面透过媒体与法律手段，试图抹黑并打击他的政治活动，该事件被视为中共在全球范围内升级跨国镇压的典型案例。</p>
 <p>库珀说，“北京对沈伯洋案件的操作显然是他们在国际上法律战策略的升级。他们傲慢地告诉世界其它国家，他们可以在全球范围内延伸中共的权威，打压其它国家的言论自由。我们已经看到这种更隐蔽的手段。”</p>
 <p>库珀认为，沈伯洋和郑敬基的案件显示了中共在全球范围内使用“法律战”和跨国镇压的严重升级。</p>
-<p>库珀表示，英国也出现中共渗透国会、针对议员的案例。在英国，中国国安部（MSS）利用研究人员与教师渗透国会、收集情报。最知名的是前国会研究员开施（ Christopher Cash）与教师拜瑞（ Christopher Berry），他们被指在 2021–2023 年替中共收集批评中共的国会议员个人与政策信息。案件引发英国政界与情报部门高度警惕，虽然最终因证据不足而撤销部分指控，但仍凸显中共情报渗透的模式。</p>
+<p>库珀表示，英国也出现中共渗透国会、针对议员的案例。在英国，中国国安部（MSS）利用研究人员与教师渗透国会、收集情报。最知名的是前国会研究员开施（ Christopher Cash）与教师拜瑞（ Christopher Berry），他们被指在2021–2023年替中共收集批评中共的国会议员个人与政策信息。案件引发英国政界与情报部门高度警惕，虽然最终因证据不足而撤销部分指控，但仍凸显中共情报渗透的模式。</p>
 <p>他认为，中共国安部的秘密警察策略在全球范围内被复制，无论是在加拿大国会、英国国会，甚至在社区活动中，都能看到相似的情报收集与信息战。</p>
 <h2>法律和政策建议</h2>
-<p>库珀认为，加拿大政府必须立即实施已通过的“外国代理人登记法案”，以提升透明度。</p>
-<p>他同时强调，保守党议员贝赞（James Bezan）提出的C-219法案，首次将跨国镇压定罪，至关重要。他说：“跨国镇压可能对批评北京政权的华人社群造成致命后果。因此，这项法案在我看来至关重要，因为它针对了来自中共的、对加拿大的最尖锐威胁，这不仅是政治问题，更关乎加拿大公民的生命安全。”</p>
+<p>库珀认为，加拿大政府必须立即实施已通过的《外国代理人登记法案》，以提升透明度。</p>
+<p>他同时强调，保守党议员贝赞（James Bezan）提出的C-219法案，首次将跨国镇压定罪，至关重要。</p>
+<p>他说：“跨国镇压可能对批评北京政权的华人社群造成致命后果。因此，这项法案在我看来至关重要，因为它针对了来自中共的、对加拿大的最尖锐威胁，这不仅是政治问题，更关乎加拿大公民的生命安全。”</p>
 <p>库珀分析道，加拿大对中共跨国镇压和侵略的理解，在遭受“人质外交”期间达到高峰。但在加拿大人迈克尔·科夫里格（Michael Kovrig）获释后，尤其是现在的自由党政府期间，似乎已经降低了对这一问题的关注。</p>
 <p>他认为，加拿大政府对中共及其跨国镇压所带来威胁的警觉性显然下降，这本身对加拿大构成了生存威胁。“如果加拿大政府降低关注中共对寻求自由人士构成的威胁，那将是一个非常深刻的错误。”</p>
 <h2><strong>纽约孙雯案将成为加国调查中共渗透的蓝图</strong></h2>
 <p>纽约州长前副幕僚长孙雯（Linda Sun）与丈夫胡骁（Chris Hu）11月12日（周三）在布碌崙联邦法院出庭受审，面临包括未登记为外国代理人、电汇诈欺、贿赂与洗钱等多项联邦重罪指控。检方指控，孙雯在任职州政府期间暗中为中共政府行事，以政治影响力换取金钱与奢华利益。</p>
-<p>检方指控之一是2020年疫情爆发后，孙雯夫妇被控操纵PPE（个人防护用品）采购合约，将州政府合同导向家族与友人控制的中国公司，并从中收取数百万美元回扣。这些资金被用于购买价值360万美元的长岛豪宅、190万美元的夏威夷公寓，以及豪车。</p>
+<p>检方指控之一是2020年疫情爆发后，孙雯夫妇被控操纵PPE（个人防护用品）采购合约，将州政府合同交给家族与友人控制的中国公司，并从中收取数百万美元回扣。这些资金被用于购买价值360万美元的长岛豪宅、190万美元的夏威夷公寓，以及豪车。</p>
 <p>库珀也一直在密切关注孙雯案件。根据他在中共跨国洗钱方面的丰富专业知识，以及中共在全球范围内利用有组织犯罪进行运作的事实，他认定“这是一个极其严重的案件”。</p>
-<p>他说：“证据显示，孙雯利用自己的家族生意为自己牟利，……以换取对纽约州政府的影响。我相信这个案件可能成为中共在加拿大运作的试金石，特别是在多伦多和温哥华的华人社区中，传闻一些知名政治人物从中共的贿赂中获利数百万。这些案件在加拿大尚未得到证实，但我相信孙雯在纽约的案件将为加拿大政府调查可疑加拿大政治人物的蓝图，如果他们有兴趣这样做的话。”</p>
+<p>他说：“证据显示，孙雯利用自己的家族生意为自己牟利……以换取对纽约州政府的影响。我相信这个案件可能成为中共在加拿大运作的试金石，特别是在多伦多和温哥华的华人社区中，传闻一些知名政治人物从中共的贿赂中获利数百万。这些案件在加拿大尚未得到证实，但我相信孙雯在纽约的案件将为加拿大政府调查可疑加拿大政治人物的蓝图，如果他们有兴趣这样做的话。”</p>
 <p>责任编辑：田青</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/16/n10222351.md#1" target="_blank">还原真实的中共：共产党大力拥护民主！？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/4/n14648435.htm">获奖调查记者：中共在加剧全球跨国镇压</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/4/n14648435.htm">加国调查记者：中共升级跨国镇压 威胁全球</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648435.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
